Update portfolio project (corrélation entre les films).ipynb

--- a/portfolio project (corrélation entre les films).ipynb
+++ b/portfolio project (corrélation entre les films).ipynb
@@ -238,7 +238,7 @@
     }
    ],
    "source": [
-    "#regarder si il y a des variables manquante\n",
+    "#Regardons s’il y a des variables manquantes\n",
     "df.isnull().sum()"
    ]
   },
